<resources>
    <string name="app_name">Nako</string>

    <!-- bottom_navigation_menu.xml에 사용되는 item의 title 속성 -->
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Diet</string>
    <string name="text_label_3">Exercise</string>
    <string name="text_label_4">Setting</string>
    <string name="text_label_5">Cafeteria</string>

    <!--exercise에 관한 String -->
    <string name="introduce_exercise">간단한 운동 소개</string>
    <string name="squat_desc">
        스쿼트\n
        (1) 다리를 어깨너비만큼 벌린다.\n
        (2) 발이 정면을 향하도록 한다.\n
        (3) 엉덩이를 뒤로 빼주며 앉는다.\n
        (4) 천천히 앉았다 일어선다.
    </string>
    <string name="wide_squat_desc">
        와이드 스쿼트\n
        (1) 다리를 어깨너비만큼 벌려준다.\n
        (2) 발끝은 45도 각도로 잡는다.\n
        (3) 무릎과 발의 방향을 일치시킨다.\n
        (4) 천천히 앉았다 일어선다.
    </string>
    <string name="lunge_desc">
        런지\n
        (1) 다리를 어깨너비만큼 벌려준다.\n
        (2) 한 발을 앞쪽으로 \'ㄱ\'자가 되게 한다.\n
        (3) 다른 발을 \'ㄴ\'자가 되도록 앉는다.\n
        (4) 앞 발에 무게중심을 두어 같은 자세를 반복한다.\n
        왼쪽, 오른쪽 10개 3세트씩 시행
    </string>
    <string name="plank_desc">
        플랭크\n
        (1) 바닥에 엎드린 후 팔뚝으로 중심을 잡고 다리는 약간 벌린 상태로 일자를 유지한다.\n
        (2) 팔꿈치와 어깨는 일자를 유지한다.\n
        (3) 발가락을 세우며 복부에 힘을 주고 몸을 앞으로 들어 올린다.\n
        (4) 몸은 전체에 걸쳐 일자상태를 유지한다.\n
        (5) 자세를 최소 15초 최대 30초 동안 유지한다.
    </string>
    <string name="crunches_desc">
        크런치\n
        (1) 바닥에 누워서 다리를 고정시키고 시선을 몸이 바라보는 방향과 같게 한다.\n
        (2) 골반을 살짝 후반경사시켜 허리와 바닥 사이의 공간이 없도록 한다.\n
        (3) 시선이 천장을 향하면서 복근을 쥐어짜는 힘으로 상반신을 적당히 든다. 이 때 머리를 과도하게 당기지 않는다.\n
        (4) 2번 자세로 돌아온다.\n
        (5) 1~4번을 반복한다.
    </string>

    <!--학식메뉴 칼로리 예측 타이틀-->
    <string name="title_cafeteria">학생생활관식당 점심 메뉴</string>
</resources>