<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exerciseFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical"
    tools:context=".ExerciseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/subtitle_exercise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:background="@drawable/introduction_to_exercise"
                    android:text="@string/introduce_exercise"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/squat"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/squat" />

                <TextView
                    android:id="@+id/squat_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/squat_desc"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/wide_squat"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/wide_squat" />

                <TextView
                    android:id="@+id/wide_squat_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/wide_squat_desc"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/lunge"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/lunge2" />

                <TextView
                    android:id="@+id/lunge_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/lunge_desc"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/plank"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/plank" />

                <TextView
                    android:id="@+id/plank_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/plank_desc"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/crunches"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/crunches" />

                <TextView
                    android:id="@+id/crunches_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/crunches_desc"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>